manifests/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: token-test
  labels:
    openpolicyagent.org/webhook: ignore
