manifests/deploy-server.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: factor-server
  namespace: token-test
spec:
  ports:
    - port: 8080
      name: http
  selector:
    k8s-app: token-server

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: token-server
  namespace: token-test
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: token-server
  strategy:
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        k8s-app: token-server
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      serviceAccountName: token-reviewer
      imagePullSecrets:
        - name: image-pull-secret
      containers:
        - name: token-server
          imagePullPolicy: Always
          image: ishenle/token-server:v0.3
          ports:
            - containerPort: 8080
              name: http
          resources:
            limits:
              memory: 100Mi
              cpu: 100m
            requests:
              memory: 10Mi
              cpu: 10m
